# ubb

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTEXT-MAP.md  LICENSE  PROGRESS.md  README.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
ubb-sdk/: CHANGELOG.md  MIGRATION.md  README.md  pyproject.toml  requirements.lock.txt
ubb-sdk/codegen/: README.md  config.yaml  generate_core.py  generate_exceptions.py
ubb-sdk/tests/: test_accounts_client.py  test_api_keys_client.py  test_billing_client.py  test_budget_client.py  test_business_margin_client.py  test_client.py  test_error_hierarchy.py  test_generated_core.py  test_grants_client.py  test_margin_client.py  test_metering_client.py  test_orchestration.py  test_past_limit.py  test_postpaid_client.py  test_rate_card_client.py  test_referrals_client.py  test_release.py  test_retry.py  test_revenue_mode_client.py  test_sandbox_client.py  test_sdk_delegation.py  test_stop_verdict.py  test_subscriptions_client.py  test_tenant_config_tax_client.py  test_ubb_client_referrals.py  test_ubb_client_subscriptions.py  test_webhooks.py  test_widget_token.py
ubb-sdk/ubb/: __init__.py  _exceptions_generated.py  _http.py  _models.py  _spec_revision.py  billing.py  client.py  exceptions.py  metering.py  referrals.py  retry.py  subscriptions.py  types.py  webhooks.py
ubb-sdk/ubb/_core/: __init__.py
ubb-sdk/ubb/_core/models/: __init__.py  analytics_earnings_out.py  analytics_summary_out.py  api_key_create_in.py  api_key_list_response.py  api_key_out.py  api_v1_connect_endpoints_connect_start_response.py  api_v1_connect_endpoints_connect_status_response.py  api_v1_metering_endpoints_assign_book_response.py  api_v1_platform_endpoints_cancel_subscription_response.py  api_v1_platform_endpoints_get_business_response.py  api_v1_platform_endpoints_pause_subscription_response.py  api_v1_platform_endpoints_resume_subscription_response.py  api_v1_platform_endpoints_set_customer_seats_response.py  api_v1_platform_endpoints_subscribe_customer_response.py  api_v1_platform_endpoints_update_plan_response.py  api_v1_sandbox_endpoints_reset_sandbox_response.py  api_v1_tenant_endpoints_create_api_key_response.py  api_v1_tenant_endpoints_create_sandbox_response.py  api_v1_tenant_endpoints_get_sandbox_response.py  api_v1_tenant_endpoints_remove_member_response.py  api_v1_tenant_endpoints_revoke_api_key_response.py  api_v1_tenant_endpoints_revoke_invitation_response.py  assign_in.py  (+177 more)
(+1520 files in other folders)
