[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ubb-sdk"
# v3.0 — the coordinated breaking cut (#85): generated core (#84) + the
# problem+json error model (#78) ship together in one tenant migration. Kept in
# lockstep with ubb.__version__ (pinned by tests/test_release.py).
version = "3.0.0"
description = "Python SDK for the Usage-Based Billing platform"
requires-python = ">=3.10"
# attrs backs the generated transport+DTO core (ubb/_core); the pinned generator
# emits attrs models. httpx is the transport for both the core and the shell.
dependencies = ["httpx>=0.28", "PyJWT>=2.8", "attrs>=23.2.0"]

[project.optional-dependencies]
# The pinned code generator for the committed core. Not a runtime dependency —
# needed only to run ubb-sdk/codegen/generate_core.py (and CI's ratchet gate).
# Exact pin: it is 0.x with breaking minors, so a bump is a deliberate PR.
codegen = ["openapi-python-client==0.29.0"]

[tool.setuptools.packages.find]
include = ["ubb*"]

[tool.setuptools.package-data]
ubb = ["py.typed"]
